--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -248,7 +248,7 @@ section {
 # Header
 --------------------------------------------------------------*/
 .topbar {
-  background: #c529b8;
+  background-image: linear-gradient(  #209aa5b5 , #209aa5);
   height: 40px;
   font-size: 14px;
   transition: all 0.5s;
